--- a/StaticWebApp/index.html
+++ b/StaticWebApp/index.html
@@ -3,11 +3,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Cartão de Crédito - MDA</title>
         <meta charset="UTF-8">
-  
-        <link rel="apple-touch-icon" type="image/png" href="https://cpwebassets.codepen.io/assets/favicon/apple-touch-icon-5ae1a0698dcc2402e9712f7d01ed509a57814f994c660df9f7a952f3060705ee.png" />
-        <meta name="apple-mobile-web-app-title" content="CodePen">
-
-        <link rel="shortcut icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/favicon-aec34940fbc1a6e787974dcd360f2c6b63348d4b1f4e06c77743096d55480f33.ico" />
+        <link rel="shortcut icon" href="alfabitzar.png" />
 
         <link rel="mask-icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111" />
         <link href="https://fonts.googleapis.com/css?family=Raleway|Rock+Salt|Source+Code+Pro:300,400,600" rel="stylesheet">
@@ -207,6 +203,10 @@
                 <input id="securitycode"
                     type="text" pattern="[0-9]*"
                     inputmode="numeric">
+            </div>
+            <div class="field-container"></div>
+            <div style="text-align: right;"> 
+              <button onclick="send()">Buy me a BMW</button>         
             </div>
         </div>
     </body>
