--- a/StaticWebApp/index.html
+++ b/StaticWebApp/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="payment-title">
-            <h1>Payment Information</h1>
+            <h1>Credit Card- Monstros do Azure</h1>
         </div>
         <div class="container preload">
             <div class="creditcard">
