--- a/StaticWebApp/index.html
+++ b/StaticWebApp/index.html
@@ -11,7 +11,8 @@
     </head>
     <body>
         <div class="payment-title">
-            <h1>Credit Card- Monstros do Azure</h1>
+            <h1>Credit Card - Monstros do Azure</h1>
+            <h5>Static Web App + Function App</h5>
         </div>
         <div class="container preload">
             <div class="creditcard">
